--- a/Hafta07/KitabeviApp/Views/Home/Detay.cshtml
+++ b/Hafta07/KitabeviApp/Views/Home/Detay.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewData["Title"] = "Detay";
 }
-
 <h1 class="display-6">@Model.Ad</h1>
 <div class="row">
     <div class="col-3">
@@ -10,18 +9,17 @@
     </div>
     <div class="col-9">
         <div class="card">
-            <div class="card-header">
-                @Model.Ad
+            <div class="card-header bg-warning">
+                @Model.Yazar.Ad
             </div>
             <div class="card-body">
-                <h6>Özet</h6>
+                <h6>ÖZET</h6>
                 <p>@Model.Ozet</p>
             </div>
             <div class="card-footer">
-                <p>Basım yılı: @Model.BasimYili,  Sayfa Sayısı: @Model.SayfaSayisi
-                <span><a asp-controller="Home" asp-action="KitapListesi" asp-route-id=@Model.Id>Kategori: @Model.Kategori.Ad</span></p>
-       
-                
+                <p>Basım Yılı: @Model.BasimYili , Sayfa Sayısı: @Model.SayfaSayisi, Kategori: <span
+                        class="text-danger"><a asp-controller="Home" asp-action="KitapListesi"
+                            asp-route-id=@Model.KategoriId>@Model.Kategori.Ad</a></span></p>
             </div>
         </div>
     </div>
