--- a/Hafta07/KitabeviApp/Views/Shared/_Kitap.cshtml
+++ b/Hafta07/KitabeviApp/Views/Shared/_Kitap.cshtml
@@ -1,24 +1,23 @@
-@* Burası her bir kitabı göstermeye yarar. *@
-@Model Kitap
+@* Burası her bir KİTABI göstermeye yarar! *@
+@model Kitap
 <div class="col-3">
-    <div class="card text-center mb-4" style="height: 270px;">
-        <div class="card-header bg-primary text-White">
-            <h6 class="display-6 fs-6 fw-normal m-0">@Model.Ad</h6>
+    <div class="card text-center mb-4" style="height:270px">
+        <div class="card-header bg-primary text-white">
+            <h6 class=" display-6 fs-6 fw-normal m-0">@Model.Ad</h6>
         </div>
-      
-        <div class="card-body">
-            <div class="card-title bg-light">
+        <div class="card-body bg-light">
+            <div class="card-title">
                 @Model.Kategori.Ad
             </div>
             <div>
-                <P>Yazar: @Model.Yazar.Ad</P>
-                <P>Basım yılı: @Model.BasimYili</P>
-                <P>Sayfa Sayısı: @Model.SayfaSayisi</P>
+                <p>Yazar: @Model.Yazar.Ad</p>
+                <p>Basım Yılı: @Model.BasimYili</p>
+                <p>Sayfa Sayısı: @Model.SayfaSayisi</p>
             </div>
-            <div class="card-footer">
-                <a asp-controller="Home" asp-action="Detay" asp-route-id=@Model.id class="btn btn-sm btn-info">İncele</a>
-                <a asp-controller="Home" asp-action="Detay" asp-route-id=@Model.id class="btn btn-sm btn-info">Sepete ekle</a>
-            </div>
-
+        </div>
+        <div class="card-footer">
+            <a asp-controller="Home" asp-action="Detay" asp-route-id=@Model.Id class="btn btn-sm btn-info">İncele</a>
+            <a class="btn btn-sm btn-success">Sepete Ekle</a>
+        </div>
     </div>
 </div>
