--- a/Hafta07/KitabeviApp/Views/Shared/_Menu.cshtml
+++ b/Hafta07/KitabeviApp/Views/Shared/_Menu.cshtml
@@ -8,5 +8,6 @@
     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="YazarListesi">Yazarlar</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="KitapListesi" asp-route-id=null >Kitaplar</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="KitapListesi"
+        asp-route-id=null>Kitaplar</a>
 </li>
