--- a/Hafta07/KitabeviApp/Views/Home/KategoriListesi.cshtml
+++ b/Hafta07/KitabeviApp/Views/Home/KategoriListesi.cshtml
@@ -17,6 +17,7 @@
         @foreach (var k in Model)
         {
             <tr>
+                  @* asp-route-id program cs de bulunan route kısmı linki bir yere yönlendirmemizi sağlar. *@
                 <td>@k.Id</td>
                 <td><a asp-controller="Home" asp-action="KitapListesi" asp-route-id=@k.Id >@k.Ad</a></td>
                 <td>@k.Aciklama</td>
