--- a/Hafta08/Proje02_KitabeviApp/Views/Home/KitapGuncelle.cshtml
+++ b/Hafta08/Proje02_KitabeviApp/Views/Home/KitapGuncelle.cshtml
@@ -3,24 +3,23 @@
     ViewData["Title"] = "Kitap Güncelle";
 }
 
-
 <h1 class="display-6">Kitap Güncelle</h1>
 <hr>
 <form asp-controller="Home" asp-action="KitapGuncelle" method="post">
     <div class="row mb-2">
         <div class="col-2">
-            <label class="form-label" asp-for="Model.Kitap.Ad"></label>
+            <label class="form-label" asp-for="Kitap.Ad"></label>
         </div>
         <div class="col-4">
-            <input class="form-control" type="text" asp-for="Model.Kitap.Ad">
+            <input class="form-control" type="text" asp-for="Kitap.Ad">
         </div>
     </div>
     <div class="row mb-2">
         <div class="col-2">
-            <label class="form-label" asp-for="Model.Kitap.BasimYili"></label>
+            <label class="form-label" asp-for="Kitap.BasimYili"></label>
         </div>
         <div class="col-4">
-            <input class="form-control" type="text" asp-for="Model.Kitap.BasimYili">
+            <input class="form-control" type="text" asp-for="Kitap.BasimYili">
         </div>
     </div>
     <div class="row mb-2">
@@ -33,10 +32,10 @@
     </div>
     <div class="row mb-2">
         <div class="col-2">
-            <label class="form-label" asp-for="Model.Kitap.Ozet"></label>
+            <label class="form-label" asp-for="Kitap.Ozet"></label>
         </div>
         <div class="col-4">
-            <input class="form-control" type="text" asp-for="Model.Kitap.Ozet">
+            <input class="form-control" type="text" asp-for="Kitap.Ozet">
         </div>
     </div>
     <div class="row mb-2">
@@ -44,7 +43,7 @@
             <label class="form-label">Kategori</label>
         </div>
         <div class="col-4">
-            <select asp-for="KategoriId" class="form-select" aria-label="Default select example">
+            <select asp-for="Kitap.KategoriId" class="form-select" aria-label="Default select example">
                 <option selected>Kategori seçiniz</option>
                 @foreach (var kategori in Model.Kategoriler)
                 {
@@ -60,7 +59,7 @@
             <label class="form-label">Yazar</label>
         </div>
         <div class="col-4">
-            <select asp-for="YazarId" class="form-select" aria-label="Default select example">
+            <select asp-for="Kitap.YazarId" class="form-select" aria-label="Default select example">
                 <option selected>Yazar seçiniz</option>
                 @foreach (var yazar in Model.Yazarlar)
                 {
